# patterned-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: populate_db.py  pre_start.py
src/api/: deps.py
src/api/v_1/: api.py
src/api/v_1/endpoints/: items.py  login.py  users.py
src/core/: config.py  security.py  settings.py
src/crud/: base.py  crud.py  crud_item.py  crud_user.py
src/db/: base.py  init_db.py  session.py
src/domain/: adapter.py  repository.py  unit_of_work.py
src/models/: item.py  user.py
