[tool.poetry]
name = "patterned-api"
version = "0.1.0"
description = ""
authors = ["Daniel <gaievskyi@proton.me> Gaievskyi"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.91.0"
requests = "^2.28.2"
pydantic = "^1.10.4"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
tenacity = "^8.2.1"
email-validator = "^1.3.1"
python-dotenv = "^0.21.1"
SQLAlchemy = "^2.0.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"